beautify index.html; ES6

--- a/backend/static/index.css
+++ b/backend/static/index.css
@@ -1,3 +1,31 @@
+body {
+  background-image: url("imgs/wp8724850.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.title {
+  color: white;
+  font-size: 10em;
+  font-weight: bold;
+
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: black;
+}
+
 .no-display {
   display: none;
+}
+
+.vertical-center {
+  min-height: 100%;
+  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh;
+  /* These two lines are counted as one :-)       */
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
