--- a/mongoch/static/index.css
+++ b/mongoch/static/index.css
@@ -8,7 +8,7 @@ body {
 
 .title {
   color: white;
-  font-size: 10em;
+  font-size: 10vw;
   font-weight: bold;
 
   -webkit-text-stroke-width: 2px;
