--- a/mongoch/static/chat.css
+++ b/mongoch/static/chat.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Noto Sans TC', sans-serif;
+}
+
 body {
   background-image: url("imgs/wp8724850.jpg");
   background-position: center;
