--- a/mongoch/static/chat.css
+++ b/mongoch/static/chat.css
@@ -126,3 +126,47 @@ label.time-label {
   margin-top: 10px;
   margin-bottom: 20px;
 }
+
+#send-button {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
+#personal-info {
+  filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(271deg) brightness(103%) contrast(101%);
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 80px;
+  width: auto;
+}
+
+#info-page {
+  display: none;
+  position: absolute;
+  width: 40%;
+  height: 40%;
+  left: 30%;
+  top: 30%;
+  background-color: #DDDDDD;
+  border-radius: 32px;
+  z-index: 100;
+  box-shadow: 5px 5px 3px grey;
+}
+
+#close {
+  right: 0;
+  font-size: 300%;
+}
+
+#hint {
+  font-size: small;
+  color: white;
+  position: absolute;
+  right: 3px;
+  bottom: 3px;
+  padding: 0px;
+  margin: 0px;
+}
