improve some user experience

--- a/mongoch/static/chat.css
+++ b/mongoch/static/chat.css
@@ -162,7 +162,7 @@ label.time-label {
 }
 
 #hint {
-  font-size: small;
+  font-size: medium;
   color: white;
   position: absolute;
   right: 3px;
